--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/clasp": "^3.1.1",
     "@types/google-apps-script": "^1.0.56"
   }
 }
